# scylla-operator

./: .dockerignore  .generated_files  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .goreleaser-nightly.yml  .goreleaser.yml  AGENTS.md  AI_USAGE_POLICY.md  API_CONVENTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  PROJECT  README.md  RELEASE.md  go.mod  go.sum  index.html  install-dependencies.sh  meta.yaml  release.md  renovate.json  version.sh
docs/: Makefile  README-dev.md  README.md  contributing.md  eks.md  generic.md  gke.md  minikube.md  pyproject.toml  quickstart.md  scylla_cluster_crd.md
docs/_utils/: deploy.sh  redirect.sh  redirects.yaml  setup.sh
docs/gke/: gke.md  gke.sh
docs/gke/manifests/: cluster.yaml.bkp  cpu-policy-daemonset.yaml
docs/hack/: install-poetry.sh
docs/source/: DOCS_HINTS.md  DOCS_STRUCTURE.md  DOCS_WORKLOG.md  NEW_DOCS_STRUCTURE.md  conf.py  contributing.md  eks.md  exposing.md  generic.md  gke.md  helm.md  index.md  index.rst  manager.md  managerv2.md  migration.md  monitoring.md  node_operations.md  performance.md  releases.md  scylla-cluster-crd.md  scylla_cluster_crd.md  scylla_manager_crd.md  storage_resizing.md  upgrade.md
docs/source/.internal/: namespaces.md  scylladbcluster-cluster-ip-exposure-caution.md  tuning-qos-caution.md  wait-for-status-conditions.nodeconfig.code-block.md
docs/source/_ext/: myst_multiversion_substitutions.py  scylladb_markdown.py  version_context_substitutions.py
docs/source/_legacy/: index.md
docs/source/_snippets/: scyllacluster-namespace-tip.md
docs/source/_static/: custom.css  fix-cards.js
docs/source/architecture/: automatic-data-cleanup.md  components.odg  deploy.odg  index.md  manager.md  monitoring.md  networking.md  overview.md  statefulsets-and-racks.md  storage.md  tuning.md
docs/source/clients/: index.rst
docs/source/concepts/: architecture-overview.md  crd-ecosystem-old.md  crd-ecosystem.md  failure-modes.md  index.md  ipv6-networking.md  manager-integration.md  multi-datacenter-connectivity.md  networking-model.md  operator-pattern.md  performance-and-tuning.md  racks-zones-topology.md  storage.md  why-scylladb-on-kubernetes.md
docs/source/connect-your-app/: alternator.md  configure-external-access.md  connect-via-cql.md  discovery.md  index.md
docs/source/connecting/: alternator.md  cql.md  discovery.md  external-access.md  index.md
docs/source/contributing/: development-setup.md  index.md
docs/source/deploy-scylladb/: deploy-multi-dc-cluster.md  deploy-single-dc-cluster.md  deploy-your-first-cluster.md  expose-grafana.md  index.md  install-scylladb-manager.md  overview.md  production-checklist.md  reference-deployment-eks.md  reference-deployment-gke.md  reference-deployment-openshift.md  set-up-dedicated-node-pools.md  set-up-monitoring.md
docs/source/deploying/: cpu-pinning.md  dedicated-node-pools.md  exposing-grafana.md  index.md  monitoring.md  multi-dc-cluster.md  node-configuration.md  operator-configuration.md  production-checklist.md  single-dc-cluster.md
docs/source/get-started/: eks.md  (+7 more)
(+6713 files in other folders)
