[tool.poetry]
name = "scylla-operator-docs"
description = "Scylla Operator Documentation"
version = "0.0.1"
authors = ["ScyllaDB Documentation Contributors"]
package-mode = false

# Pin dependencies to exact versions so CI always produces the same artifacts.
[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.18.0"
sphinx-scylladb-theme = "^1.8.1"
#sphinx-substitution-extensions = "=2024.10.17"
sphinx-sitemap = "^2.6.0"
beartype = ">0.0.0"
sphinx-autobuild = "^2024.4.19"
Sphinx = "^8.1.3"
sphinx-multiversion-scylla = "^0.3.1"
redirects_cli ="^0.1.3"
myst-parser = "^4.0.0"
sphinx-design = "^0.6.1"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"
