[project]
name = "scylladb-operator-docs"
description = "ScyllaDB Operator Documentation"
version = "0.1.0"
# Python version should be pinned to the one used in the uv image (https://github.com/scylladb/scylla-operator-images/blob/b26cad0c10d25d37b6002205db3fdb13a1ef941e/uv/0.10).
requires-python = ">=3.12,<3.13"
dependencies = [
    "pygments>=2.18.0",
    "sphinx-scylladb-theme>=1.9.1",
    "myst-parser>=5.0.0",
    "sphinx-autobuild>=2025.4.8",
    "sphinx>=9.0",
    "sphinx-multiversion-scylla>=0.3.7",
    "sphinx-sitemap>=2.9.0",
    "redirects_cli>=0.1.3",
    "beartype>=0.0.0",
    "sphinx-design>=0.7.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.uv]
package = false
# UV version should be aligned with the uv image tag (https://github.com/scylladb/scylla-operator-images/blob/b26cad0c10d25d37b6002205db3fdb13a1ef941e/uv/0.10).
required-version = '>=0.10.9, <0.11.0'
